force-app/main/default/objects/Recovery_Case_Class_Assignment_Setting__c/fields/Eligible_Class__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Class__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>