force-app/main/default/objects/Recovery_Case_Class_Assignment_Setting__c/fields/Recovery_Amount_End_Limit__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Amount_End_Limit__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Recovery Amount End Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>