force-app/main/default/objects/Recovery_Case_Class_Assignment_Setting__c/fields/Task_Us__c.field-meta.xml
<CustomField>
    <fullName>Task_Us__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Us</label>
    <type>Checkbox</type>
</CustomField>